--- a/index.html
+++ b/index.html
@@ -5,10 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--ICONE DA PAGINAS-->
-    <link rel="shortcut icon" href="">
+    <link rel="shortcut icon" href="./src/css/estilo.css">
     <!--LINK EXTERNO CSS-->
     <link rel="stylesheet" href="">
-
     <title>Marvel</title>
 </head>
 
@@ -21,7 +20,6 @@
                 <li><a href="#sobre">Sobre</a></li>
                 <li><a href="#">Empresa</a></li>
                 <li><a href="#contato">Contato</a></li>
-
             </ul>
         </nav>
     </header>
@@ -68,6 +66,7 @@
         <h5>@2024</h5>
     </main>
 
+    <script src="./src/js/script.js"></script>
 </body>
 
 </html>
