Linkando o JS e o css no index

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!--ICONE DA PAGINAS-->
     <link rel="shortcut icon" href="">
     <!--LINK EXTERNO CSS-->
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="./src/css/estilo.css">
 
     <title>Marvel</title>
 </head>
@@ -64,7 +64,7 @@
             <input type="email" id="email" placeholder="Cadastre seu e-mail" class="info-email">
             <p class="mensagem hidden">Obrigado Meu Caro(a)! Recebemos seu e-mail!</p>
         </section>
-
+        <script src="./src/js/script.js"></script>
         <h5>@2024</h5>
     </main>
 
