--- a/index.html
+++ b/index.html
@@ -5,14 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--ICONE DA PAGINAS-->
-    <link rel="shortcut icon" href="./src/css/estilo.css">
+    <link rel="shortcut icon" href="">
     <!--LINK EXTERNO CSS-->
-<<<<<<< HEAD
     <link rel="stylesheet" href="./src/css/estilo.css">
-
-=======
-    <link rel="stylesheet" href="">
->>>>>>> 90976c9ccd44c1d50d8cff3c14871a067197fa86
     <title>Marvel</title>
 </head>
 
